Prepare project for publish
fixed any bugs and errors in endpoints and logic
wrote README for proper use
fixed commands
added command for populating database
